[package]
name = "http-rest-api-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
chrono = { version = "0.4.35", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "sqlite", "chrono", "macros"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
